--- a/sass/Pages/_noteechantee.scss
+++ b/sass/Pages/_noteechantee.scss
@@ -36,11 +36,15 @@
             display: flex;
             justify-content: space-between;
             margin-bottom: 10px;
+
+            img {
+                width: 110%;
+            }
             
             h3 {
                 margin: 0;
                 padding: 0;
-                display: block;
+                width: 35%;
                 
                 @include surligne ($texte-enchantee);
 
