--- a/style.css
+++ b/style.css
@@ -129,8 +129,9 @@ footer .contactez-nous:hover {
 .bloc_central .menu-note-enchantee i {
   font-size: 2rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
-  -webkit-background: linear-gradient(to right, #F0505F, #F78F6A);
+  background: -webkit-linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 .bloc_central .menu-note-enchantee p {
@@ -167,8 +168,9 @@ footer .contactez-nous:hover {
 .bloc_central .menu-chic-francaise p {
   background: #c67412;
   background: linear-gradient(90deg, #c67412 25%, #b380d6 55%, #925ffe 85%);
-  -webkit-background: linear-gradient(90deg, #c67412 25%, #b380d6 55%, #925ffe 85%);
+  background: -webkit-linear-gradient(90deg, #c67412 25%, #b380d6 55%, #925ffe 85%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 .bloc_central .menu-chic-francaise h3 {
@@ -188,8 +190,9 @@ footer .contactez-nous:hover {
 }
 .bloc_central .menu-delice-papilles p {
   background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
-  -webkit-background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
+  background: -webkit-linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 .bloc_central .menu-delice-papilles h3 {
@@ -208,8 +211,9 @@ footer .contactez-nous:hover {
 }
 .bloc_central .menu-palette-goût p {
   background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
-  -webkit-background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
+  background: -webkit-linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 .bloc_central .menu-palette-goût h3 {
@@ -316,8 +320,9 @@ footer .contactez-nous:hover {
 .conteneur__note-enchantée .titre_conteneur i {
   font-size: 3rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
-  -webkit-background: linear-gradient(to right, #F0505F, #F78F6A);
+  background: -webkit-linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 .conteneur__note-enchantée .titre_menu__note-enchantée {
@@ -373,8 +378,9 @@ footer .contactez-nous:hover {
 .conteneur__note-enchantée .titre_footer i {
   font-size: 1.8rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
-  -webkit-background: linear-gradient(to right, #F0505F, #F78F6A);
+  background: -webkit-linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
@@ -398,8 +404,9 @@ footer .contactez-nous:hover {
 .conteneur__chic-francaise .titre_conteneur {
   background: #c67412;
   background: linear-gradient(90deg, #c67412 25%, #b380d6 55%, #925ffe 85%);
-  -webkit-background: linear-gradient(90deg, #c67412 25%, #b380d6 55%, #925ffe 85%);
+  background: -webkit-linear-gradient(90deg, #c67412 25%, #b380d6 55%, #925ffe 85%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   font-family: "Croissant One", cursive;
   text-align: center;
@@ -520,8 +527,9 @@ footer .contactez-nous:hover {
 .conteneur__délice-papilles .titre_conteneur {
   font-family: "Dancing Script", cursive;
   background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
-  -webkit-background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
+  background: -webkit-linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   text-align: center;
 }
@@ -590,8 +598,9 @@ footer .contactez-nous:hover {
 .conteneur__délice-papilles .titre_footer i {
   font-size: 1.8rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
-  -webkit-background: linear-gradient(to right, #F0505F, #F78F6A);
+  background: -webkit-linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
@@ -616,8 +625,9 @@ footer .contactez-nous:hover {
 .conteneur__palette-gout .titre_conteneur {
   font-family: "Kaushan Script", cursive;
   background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
-  -webkit-background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
+  background: -webkit-linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
   text-align: center;
 }
@@ -686,8 +696,9 @@ footer .contactez-nous:hover {
 .conteneur__palette-gout .titre_footer i {
   font-size: 1.8rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
-  -webkit-background: linear-gradient(to right, #F0505F, #F78F6A);
+  background: -webkit-linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
