--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 // Paramètre généraux 
 @import "./sass/Base/parametre-generaux";
+@import "./sass/Base/mediaqueries";
 
 // Variables
 @import "./sass/Utils/variables";
