--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -29,8 +29,8 @@ $texte-francaise--violet:#6e4ccc;
     // Dégradé 
     @mixin degrade-francaise {
         background: #c67412;
-        background: linear-gradient(90deg, #c67412 25%, rgba(179,128,214,1) 55%, rgba(146,95,254,1) 85%);
-        background: -webkit-linear-gradient(90deg, #c67412 25%, rgba(179,128,214,1) 55%, rgba(146,95,254,1) 85%); // Chrome, Safari
+        background: linear-gradient(to right, #c67412 25%, rgba(179,128,214,1) 55%, rgba(146,95,254,1) 85%);
+        background: -webkit-linear-gradient(to right, #c67412 25%, rgba(179,128,214,1) 55%, rgba(146,95,254,1) 85%); // Chrome, Safari
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
@@ -47,8 +47,8 @@ $texte-papilles:#1b88fb;
 
     // Dégradé
     @mixin degrade-papilles {
-        background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
-        background: -webkit-linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%); // Chrome, Safari
+        background: linear-gradient(to right, #072ddd 25%, #1571f3 55%, #249ef9 85%);
+        background: -webkit-linear-gradient(to right, #072ddd 25%, #1571f3 55%, #249ef9 85%); // Chrome, Safari
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
@@ -65,8 +65,8 @@ $texte-gout:#72bf56;
 
     // Dégradé
     @mixin degrade-gout {
-        background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
-        background: -webkit-linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%); // Chrome, Safari
+        background: linear-gradient(to right, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
+        background: -webkit-linear-gradient(to right, #479a44 25%, #83cd60 55%, #BEFF7F 85%); // Chrome, Safari
         -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
