--- a/sass/Pages/_acceuil.scss
+++ b/sass/Pages/_acceuil.scss
@@ -10,22 +10,24 @@
         margin: 0 0 30px 0;
         padding: 0;
     
-            > div {
-                box-shadow: 0px 0px 5px 2px #ededed;
-                margin: 40px 0 20px 0;
-                padding:0;
-                width: 36%;
-            }
-    
-            h3 {
+        article {
+            box-shadow: 0px 0px 5px 2px #ededed;
+            margin: 40px 0 20px 0;
+            padding:0;
+            width: 36%;
+        }
+
+        h2{
+            font-size: 1.3rem;
+            margin-bottom: 10px;
+
+            span {
+                display: block;
                 font-size: 2rem;
                 margin-top: 0;
             }
-    
-            p{
-                margin-bottom: 10px;
-            }
-    
+        }
+
         /* MENU NOTE ENCHANTEE */
         .menu-note-enchantee {
             background-color: $background-enchantee;
@@ -34,19 +36,19 @@
             margin-right: 20px;
             font-family: $police-titre-enchantee;
             
-            h3 {
-                font-family: $police-texte-enchantee;
-            }
-            
             i {
                 font-size: 2rem;
                 @include degrade-enchantee;
             }
     
-            p {
+            h2 {
                 margin-top: 2px;
+
+                span {
+                    font-family: $police-texte-enchantee;
+                }
             }
-    
+
             a {
                 text-decoration: none;
                 color: $texte-enchantee;
@@ -81,16 +83,16 @@
             margin-left: 20px;
             font-family: $police-titre-francaise;
             
-            p {
+            h2 {
             @include degrade-francaise;
+
+                span {
+                    font-family: $police-texte-francaise;
+                    font-weight: normal;
+                    color: $texte-francaise--orange;
+                }
             }
-    
-            h3 {
-                font-family: $police-texte-francaise;
-                font-weight: normal;
-                color: $texte-francaise--orange;
-            }
-    
+
             a {
                 text-decoration: none;
             }
@@ -103,12 +105,12 @@
             margin-right: 20px;
             font-family: $police-titre-papilles;
     
-            p{
-                @include degrade-papilles
-            }
-    
-            h3 {
-                font-family: $police-texte-papilles;
+            h2{
+                @include degrade-papilles;
+
+                span{
+                    font-family: $police-texte-papilles;
+                }
             }
 
             a {
@@ -125,21 +127,23 @@
             margin-left: 20px;
             font-family: $police-titre-gout;
     
-            p{
+            h2{
                 @include degrade-gout;
+
+                span {
+                    font-family: $police-texte-gout;
+                    color: $texte-gout;
+                }
             }
     
-            h3 {
-                font-family: $police-texte-gout;
-                color: $texte-gout;
-            }
+            
             a {
                 text-decoration: none;
             }
         }
     
     }
-    
+
         /* BOUTON PROCHAINEMENT */
     .bouton-prochainement {
         display: block;
